--- a/inst/report_file.Rmd
+++ b/inst/report_file.Rmd
@@ -72,7 +72,7 @@ quantified and analyzed?
 
 `r input$text_connections`
 
-## unCertainties 
+## unCertainties:
 - What are the principal uncertainties (1) in the short term (for example, climate, demographic, economic, and political factors) and (2) in the long term (that is, after the first 10-20 years)?
 - Are the uncertainties the result of lack of data or lack of observations, or are they largely irreducible? 
 - If the uncertainties can be reduced, how much effort and budget would be required to reduce these uncertainties? 
@@ -103,9 +103,9 @@ Is this project long lived (i.e. lifetime greater than 20 years)? **`r input$lif
 
 What kind of project is it? **`r input$project_type`**
 
-Does the policy involve water price changes, or allocation to irrigation or domestic demands? **`r input$water_alloc`**
+Does the policy have water allocation effects (e.g., via price changes or laws)? **`r input$water_alloc`**
 
-Is the policy easily easily reversible should it prove unfavorable? **`r input$reversible`**
+Is the policy easily easily reversible upon further information? **`r input$reversible`**
 
 ```{r result} 
 if((input$lifetime == 'No') | (input$lifetime == 'Yes' &
@@ -123,6 +123,5 @@ project requires a Phase 2 sensitivity analysis.") }
 
 ```{r chart}
 #get_flowchart() causes error. Not sure why. This means that you'll have to rebuild the flowchart everytime you make a change in the flowchart.R file...
+#![Is Phase 2 necessary for this project?](www/flowchart.png)
 ```
-
-![Is Phase 2 necessary for this project?](www/flowchart.png)
