project title now appears in title of report, as well as below

--- a/inst/report_file.Rmd
+++ b/inst/report_file.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "Climate Screening Worksheet" 
-date: "August 2, 2016" 
+title: '`r paste0(input$title, ": ", "Climate Screening Worksheet")`' 
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: 
   pdf_document:
     latex_engine: xelatex
